--- a/src/knockout/templates/question-matrixdynamic.html
+++ b/src/knockout/templates/question-matrixdynamic.html
@@ -12,6 +12,7 @@
                   <!-- ko if: question.hasRowText --><td></td><!-- /ko -->
                   <!-- ko foreach: question.koVisibleColumns -->
                   <th data-bind="style: { minWidth: question.getColumnWidth($data) }">
+                      <span data-bind="text: sequence + '.', attr: { 'style': question.sequenceStyle }"></span>
                       <!-- ko template: { name: 'survey-string', data: locTitle } -->
                       <!-- /ko -->
                   </th>
@@ -24,7 +25,12 @@
           <tbody>
               <!-- ko foreach: { data: question.koRows, as: 'row' } -->
               <tr>
-                  <!-- ko if: question.hasRowText --><td><!-- ko template: { name: 'survey-string', data: row.locText } --><!-- /ko --></td><!-- /ko -->
+                  <!-- ko if: question.hasRowText -->
+                    <td>
+                        <span data-bind="text: row.sequence + '.', attr: { 'style': question.sequenceStyle }"></span>
+                        <!-- ko template: { name: 'survey-string', data: row.locText } --><!-- /ko -->
+                    </td>
+                  <!-- /ko -->
                   <!-- ko foreach: row.cells-->
                   <!-- ko template: { name: 'survey-matrixcell', data: $data, as: "cell", afterRender: $data.data.koCellAfterRender } -->
                   <!-- /ko -->
@@ -48,7 +54,10 @@
                   <tr>
                       <th data-bind="visible: question.showHeader"></th>
                       <!-- ko foreach: { data: question.koRows, as: 'row' } -->
-                          <th><!-- ko template: { name: 'survey-string', data: row.locText } --><!-- /ko --></th>
+                          <th>
+                              <span data-bind="text: row.sequence + '.', attr: { 'style': question.sequenceStyle }"></span>
+                              <!-- ko template: { name: 'survey-string', data: row.locText } --><!-- /ko -->
+                          </th>
                       <!-- /ko -->
                   </tr>
               </thead>
@@ -57,6 +66,7 @@
               <!-- ko foreach: { data: question.koVisibleColumns, as: 'column' } -->
                   <tr>
                       <th data-bind="visible: question.showHeader, style: { minWidth: question.getColumnWidth($data) }">
+                          <span data-bind="text: column.sequence + '.', attr: { 'style': question.sequenceStyle }"></span>
                           <!-- ko template: { name: 'survey-string', data: locTitle } -->
                           <!-- /ko -->
                       </th>
