--- a/src/knockout/templates/page.html
+++ b/src/knockout/templates/page.html
@@ -1,6 +1,6 @@
 ﻿<script type="text/html" id="survey-page">
   <div data-bind="css: data.css.page.root">
-      <!-- ko if: (processedTitle.length > 0) && data.showPageTitles -->
+      <!-- ko if: (processedTitle.length > 0) && data.showPageTitles && !data.isPdfRender -->
       <h4 data-bind="css: data.css.pageTitle">
           <!-- ko template: { name: 'survey-string', data: locTitle } -->
           <!-- /ko -->
