--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-textarea, input[type="text"], input[type="number"], select {
+textarea, input:not(type="button"), select {
   width: 100%;
 }
 
@@ -9,7 +9,8 @@ textarea, input[type="text"], input[type="number"], select {
 .sv_main {
   display: flex;
   flex-direction: column;
-  height: 100%;
+	height: 100%;
+	padding: 5px;
 }
 
 .sv_page {
@@ -20,20 +21,26 @@ textarea, input[type="text"], input[type="number"], select {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 10px;
 }
 
-.btn {
-  margin: 5px;
+.custom-control-label span {
+	display: inline-block;
+	vertical-align: middle;
+	margin-bottom: -2px;
 }
 
 .btn-primary {
-  background-color: var(--pms-accent-color-primary) !important;
+  background-color: var(--pms-accent-color-primary, #0099cc) !important;
 }
 
 .btn-success {
-  background-color: var(--pms-accent-color-success) !important;
+  background-color: var(--pms-accent-color-success, #007e33) !important;
 }
+
+.sv_progress div[role="progressbar"] {
+	transition: none;
+}
+
 
 /* 'lg' 'xs' 'sm', '1x', '2x', '3x', '4x', '5x', '6x', '7x', '8x', '9x', '10x'*/
 
