Added multiple choice matrix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,41 +27,41 @@ textarea, input:not([type="button"]), select {
 /* 'lg' 'xs' 'sm', '1x', '2x', '3x', '4x', '5x', '6x', '7x', '8x', '9x', '10x'*/
 
 svg.fa-10x {
-  width: 8px;
-  height: 8px;
+  width: .8rem;
+  height: .8rem;
 }
 
 svg.fa-9x {
-  width: 12px;
-  height: 12px;
+  width: .9rem;
+  height: .9rem;
 }
 
 svg.fa-8x {
-  height: 16px;
-  width: 16px;
+  height: 1rem;
+  width: 1rem;
 }
 
 svg.fa-7x {
-  height: 19px;
-  width: 19px;
+  height: 1.1rem;
+  width: 1.1rem;
 }
 
 svg.fa-6x {
-  height: 24px;
-  width: 24px;
+  height: 1.2rem;
+  width: 1.2rem;
 }
 
 svg.fa-5x {
-  height: 28px;
-  width: 28px;
+  height: 1.3rem;
+  width: 1.3rem;
 }
 
 svg.fa-4x {
-  height: 32px;
-  width: 32px;
+  height: 1.4rem;
+  width: 1.4rem;
 }
 
 svg.fa-3x {
-  height: 48px;
-  width: 48px;
+  height: 1.5rem;
+  width: 1.5rem;
 }
